--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -8,24 +8,21 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk",
-    "deploy": "cdk deploy --require-approval never"
+    "cdk": "cdk"
   },
-  "engines": { 
-    "node": ">=20.0.0" 
-   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
-    "aws-cdk": "2.171.0",
+    "aws-cdk": "2.171.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.171.0",
-    "constructs": "^10.0.0",
-    "dotenv": "^16.4.5"
-  }
+    "aws-cdk-lib": "2.171.1",
+    "constructs": "^10.0.0"
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
