--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.171.1",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "dotenv": "^16.4.5"
   },
   "main": "index.js",
   "license": "MIT"
