--- a/packages/lambda-function/package.json
+++ b/packages/lambda-function/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint \"src/index.ts\"",
     "test": "jest",
     "start": "sls offline start"
   },
